<resources>
    <string name="app_name">Food Recognizer</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="text_or">or</string>
    <string name="text_new_user">New User ? </string>
    <string name="text_sign_up"> <u>Sign Up</u> </string>
    <string name="text_register">Register</string>
    <string name="text_name">Name :</string>
    <string name="text_image">Profile Image: </string>
    <string name="text_age">Age :</string>
    <string name="text_gender">Gender :</string>
    <string name="text_gender_male">Male</string>
    <string name="text_gender_female">Female</string>
    <string name="text_height">Height :</string>
    <string name="text_weight">Weight :</string>
    <string name="text_goal">Daily Goal :</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_history">History</string>

    <string name="text_add">ADD</string>


</resources>
