<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_show_chart"
            android:title="@string/menu_progress" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_date_range"
            android:title="@string/menu_history" />
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/logoutt"
        android:title="sign Out" />
</menu>
