<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bgcard"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/text_register"
            android:textColor="#0F0F0F"
            android:textSize="34dp" />

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/bg_editext"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:paddingLeft="18dp" />

        <EditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_editext"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:paddingLeft="18dp" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_btn"
            android:text="@string/text_sign_up"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/text_or"/>

        <com.google.android.gms.common.SignInButton
            android:layout_gravity="center"
            android:id="@+id/google_button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp" />


    </LinearLayout>


</RelativeLayout>