<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="1">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:layout_gravity="center_vertical"
                android:text="@string/text_image"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/user"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_name"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/name"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_age"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/age"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:paddingLeft="18dp"
                android:selectAllOnFocus="true" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_gender"
                android:textSize="30sp"/>

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender_male"
                    android:fontFamily="@font/quicksand_book"
                    android:textSize="22sp"/>

                <RadioButton
                    android:id="@+id/female"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender_female"
                    android:fontFamily="@font/quicksand_book"
                    android:textSize="22sp"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_height"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/height"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="in cm"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_weight"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/weight"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="in kg"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_goal"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/goal"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:hint="in cal"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/next_button"
                android:src="@drawable/ic_chevron_right"
                android:layout_alignParentEnd="true"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_circle"/>

        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>
