<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment" >

    <LinearLayout
        android:layout_margin="6dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:fontFamily="@font/quicksand_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Hello XYZ!"
                android:textSize="34sp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:padding="16dp"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/user"/>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_age"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/profile_age"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_gender"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/profile_gender"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_height"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/profile_height"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/text_weight"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/profile_weight"
                android:layout_weight="0.6"
                android:background="@drawable/bg_editext"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:paddingLeft="18dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>